Added datanode graphs
git-svn-id: http://www.jointhegrid.com/svn/hadoop-cacti-jtg/trunk@15 d48a9152-7e18-4f87-800c-ca59c26a89d2

--- a/doc/INSTALL.txt
+++ b/doc/INSTALL.txt
@@ -45,7 +45,7 @@ Installation
 
      Using your cacti web interface, go to the 'Import Template' section
 	   Import hadoop_namenode.xml. It was exported with deps.
-
+     Import hadoop_datanode.xml. It was exported with deps.
 
 Testing
    cd <cacti_home>/scripts/
