Added hadoop metrics settings to the doc
git-svn-id: http://www.jointhegrid.com/svn/hadoop-cacti-jtg/trunk@22 d48a9152-7e18-4f87-800c-ca59c26a89d2

--- a/doc/INSTALL.txt
+++ b/doc/INSTALL.txt
@@ -9,6 +9,13 @@ PreReq
 Installation
 
    Hadoop
+     hadoop-metrics.properties
+       
+       dfs.class=org.apache.hadoop.metrics.spi.NullContextWithUpdateThread
+       dfs.period=300
+        
+       jvm.class=org.apache.hadoop.metrics.spi.NullContextWithUpdateThread
+       jvm.period=300	
      Enable JMX on Each Hadoop Node
        cd <hadoop>/conf
         vi jmxremote.access
