Added suggestion to use controlRole
git-svn-id: http://www.jointhegrid.com/svn/hadoop-cacti-jtg/trunk@23 d48a9152-7e18-4f87-800c-ca59c26a89d2

--- a/doc/INSTALL.txt
+++ b/doc/INSTALL.txt
@@ -17,7 +17,8 @@ Installation
        jvm.class=org.apache.hadoop.metrics.spi.NullContextWithUpdateThread
        jvm.period=300	
      Enable JMX on Each Hadoop Node
-       cd <hadoop>/conf
+        
+        cd <hadoop>/conf
         vi jmxremote.access
         monitorRole   readonly
         controlRole   readwrite
@@ -72,7 +73,8 @@ Usage
   2 Hadoop DataNode
 
   Each graph takes three or four parameters. These would be the same
-  values specified in the testing section above.
+  values specified in the testing section above. Some graphs require 
+  the controlRole. I use controlRole for all graphs.
 
   1 JMXURL
   2 user
